# shawncoin

./: .gitignore  GETTING_STARTED.md  README.md  start.sh
shawncoin/: .gitignore  CMakeLists.txt  EASY_CLI_GUIDE.md  LICENSE  README.md  shawncoin-cli  shawncoin.conf.example  shawncoind
shawncoin/.cache/clangd/index/: address.cpp.260B390BEA9A7EB6.idx  address.hpp.FBD910112CE46DED.idx  api.cpp.68F47E112B981819.idx  api.hpp.D93A604DD9E0E6C9.idx  block.cpp.C0614E8314043A31.idx  block.hpp.F8A82FCBCA765BF6.idx  blockchain.cpp.A0C537BDC8E0F4DC.idx  blockchain.hpp.8ED91CAF264C92D0.idx  chainstate.cpp.E3A91B541CA476EE.idx  chainstate.hpp.3D8C1D257A57778A.idx  config.cpp.F1B55A1C3FD49755.idx  config.hpp.27E5E595AE491A82.idx  consensus.cpp.D8C57CB63F3A9D95.idx  consensus.hpp.5DD4F795E30934A6.idx  database.cpp.A16951838A21051B.idx  database.hpp.BB5E4A8B9A8C26DA.idx  difficulty.cpp.6B884C4D32FB5D2C.idx  difficulty.hpp.60BC7685484AEDC5.idx  hash.c.7519EEC112E9C575.idx  hash.h.BE6AF7C304094157.idx  hdwallet.cpp.4F8ABFDD2B0B21E2.idx  hdwallet.hpp.EFA4A365CD40880C.idx  keys.c.6305EE18952CFC43.idx  keys.h.13C118F42409A815.idx  logger.cpp.9AEDDE5476967050.idx  logger.hpp.64BCDBA95BA64588.idx  main.cpp.6B7FE38285A2E44B.idx  mempool.cpp.497FE15FEB8A8D78.idx  mempool.hpp.759B7B50CC97DF19.idx  merkle.cpp.5CC8BF2E5BD6D021.idx  merkle.hpp.00463D9EA72267CA.idx  miner.cpp.5CE85912004D57D5.idx  miner.hpp.CC4CA4F51EBA8DBB.idx  mnemonic.cpp.5CEE07092BEAC5D1.idx  mnemonic.hpp.3B7F77C6CF9CC8FB.idx  netbase.cpp.3B0D698406A2916C.idx  netbase.hpp.9A3F11889B7CF97A.idx  node.cpp.2A544901BB36B465.idx  node.hpp.F2BABB150B7DCAD4.idx  peer.cpp.C3B0432C2D98866B.idx  (+27 more)
shawncoin/.github/workflows/: ci.yml
shawncoin/cli/: shawncoin-cli.cpp
shawncoin/contrib/init/: shawncoin.service
shawncoin/contrib/seeds/: README.txt
shawncoin/depends/: README.md
shawncoin/docker/: Dockerfile  run_tests.sh
shawncoin/docs/: API.md  BUILD.md  MINING.md  PROTOCOL.md  WHITEPAPER.md
shawncoin/src/: main.cpp
shawncoin/src/core/: block.cpp  block.hpp  blockchain.cpp  blockchain.hpp  consensus.cpp  consensus.hpp  mempool.cpp  mempool.hpp  transaction.cpp  transaction.hpp  types.cpp  types.hpp  utxo.cpp  utxo.hpp
shawncoin/src/crypto/: address.cpp  address.hpp  hash.c  hash.h  keys.c  keys.h  secure_random.c  secure_random.h  signatures.c  signatures.h
shawncoin/src/mining/: difficulty.cpp  difficulty.hpp  merkle.cpp  merkle.hpp  miner.cpp  miner.hpp  stratum.cpp  stratum.hpp
shawncoin/src/network/: netbase.cpp  netbase.hpp  node.cpp  node.hpp  peer.cpp  peer.hpp  protocol.cpp  protocol.hpp
shawncoin/src/rpc/: api.cpp  api.hpp  server.cpp  server.hpp
shawncoin/src/storage/: chainstate.cpp  chainstate.hpp  database.cpp  database.hpp
shawncoin/src/util/: config.cpp  config.hpp  logger.cpp  logger.hpp  realtime.cpp  realtime.hpp  serialize.cpp  serialize.hpp  util.cpp  util.hpp
shawncoin/src/wallet/: hdwallet.cpp  hdwallet.hpp  mnemonic.cpp  mnemonic.hpp  wallet.cpp  wallet.hpp
shawncoin/tests/: CMakeLists.txt  test_blockchain.cpp  test_mempool.cpp  test_miner.cpp  test_wallet.cpp
shawncoin/tools/: wallet_tool.cpp
